--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "watch-server",
+  "name": "clock-server",
   "version": "1.0.0",
   "description": "Get hour and minutes random",
   "main": "app.js",
